# python_scrapping_training_20241912

./: .gitignore  demo_peewee.py  example_threading.py  hello.py  hello_avance.py  pyproject.toml  qui_est_le_plus_cher.py  sandbox.ipynb  song.txt  toto.txt  wololo.py
products/: bargainbest_products.json  create_fake_products.py  dealsdirect_products.json  megamart_products.json  primepicks_products.json  rapport.csv  retailrush_products.json  shopsmart_products.json  valueking_products.json
scrapy_project/: titles
scrapy_project/scrapy_project/: pipelines.py  settings.py
scrapy_project/scrapy_project/spiders/: wikidog.py  wikidog_custom_rules.py
