[project]
name = "python-scrapping-training-20241912"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "diskcache>=5.6.3",
    "ipython>=8.30.0",
    "jupyter>=1.1.1",
    "peewee>=3.17.8",
    "playwright>=1.49.1",
    "pyotp>=2.9.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
